apply plugin: 'java'

sourceCompatibility = JavaVersion.VERSION_1_7
targetCompatibility = JavaVersion.VERSION_1_7
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {
    compile 'org.perf4j:perf4j:0.9.16'
    compile 'org.slf4j:slf4j-log4j12:1.7.6'
    compile 'org.jboss.netty:netty:3.2.10.Final'
    testCompile group: 'junit', name: 'junit', version: '4.11'
}


task classicFibo(type: JavaExec, dependsOn: build) {
    main = 'fibo.MainFibonacci'
    args = [ '43' ]
    jvmArgs "-Xss1m", "-XX:NewSize=392M", "-XX:+UseConcMarkSweepGC"
    classpath sourceSets.main.runtimeClasspath
}


test {
    testLogging.showStandardStreams = true
}